# simplemesh

./: .gitignore  CMakeLists.txt  readme.md
src/: CMakeLists.txt  elementqcalculator.h  elementqmean.h  elementquality.h  jqmetric.h  meshentity.h  sequenceset.h  simplemesh.cpp  simplemesh.h  test.cpp
src/2Dmesh/: meshentity.hpp  meshentitybase.hpp  property.hpp  simplemesh.hpp
src/core/: quicklist.hpp
