cmake_minimum_required(VERSION 3.10)

include_directories("${EIGEN_INCLUDE_DIR}")
include_directories("${IGL_INCLUDE_DIR}")
# ${IGL_INCLUDE_DIR})
# MESSAGE(STATUS ${EIGEN_INCLUDE_DIR})
# MESSAGE(STATUS ${IGL_INCLUDE_DIR})
# MESSAGE(STATUS ${INCLUDE_DIRECTORIES})
# file(GLOB_RECURSE CURRENT_HEADERS  *.h *.hpp)
# source_group("Include" FILES ${CURRENT_HEADERS})
# aux_source_directory(. SRC_LIST)
# add_executable(liulufengdata ${SRC_LIST} ${CURRENT_HEADERS})
add_executable(test test.cpp)
#add_library(simplemesh simplemesh.cpp)
#add_library(jqmetric jqmetric.cpp)
#add_library(elementqmean elementqmean.cpp)
#add_library(elementquality elementquality.cpp)

#target_link_libraries(elementquality PUBLIC jqmetric PUBLIC elementqmean PUBLIC simplemesh)
#target_link_libraries(liulufengdata PUBLIC elementquality PUBLIC jqmetric PUBLIC elementqmean PUBLIC simplemesh)